// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Router render > should match the snapshot for 404 page 1`] = `
<div>
  <main
    class="_main_1e53a6"
  >
    <div
      class="_container_1e53a6"
    >
      <h1
        class="_title_1e53a6"
      >
        404
      </h1>
      <p
        class="_text_1e53a6"
      >
        The page you requested was not found.
      </p>
      <div
        class="_buttons_1e53a6"
      >
        <button
          class="_button_1c0f93 _button--tertiary_1c0f93"
          type="button"
        >
          Previous page
        </button>
        <button
          class="_button_1c0f93 _button--tertiary_1c0f93"
          type="button"
        >
          Last stored search
        </button>
      </div>
    </div>
  </main>
</div>
`;

exports[`Router render > should match the snapshot for error page 1`] = `
<div>
  <div
    class="_container_6f7f49"
  >
    <main
      class="_main_6e3859"
    >
      <div
        class="_container_6e3859"
      >
        <h1
          class="_header_6e3859"
        >
          Oops!
        </h1>
        <p
          class="_text_6e3859"
        >
          Sorry, an unexpected error has occurred.
        </p>
        <p
          class="_errorDesc_6e3859"
        >
          Error message:
        </p>
        <p
          class="_error_6e3859"
        >
          Error throwing button was clicked
        </p>
        <p
          class="_text_6e3859"
        >
          Please try to refresh the page.
        </p>
        <button
          class="_button_1c0f93 _button--primary_1c0f93 _refreshBtn_6e3859"
          type="button"
        >
          Refresh the page
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`Router render > should match the snapshot for main route 1`] = `
<div>
  <div
    class="_container_6f7f49"
  >
    <div
      class="_page_6798d4"
    >
      <header
        class="_header_accb48"
      >
        <div
          class="_container_accb48"
        >
          <h1
            class="visually-hidden"
          >
            Rick and Morty characters
          </h1>
          <form
            class="_form_1de04e"
          >
            <input
              autocomplete="off"
              class="_input_1de04e"
              placeholder="Enter character name…"
              type="search"
              value=""
            />
            <button
              class="_button_1c0f93 _button--secondary_1c0f93"
              type="submit"
            >
              Search
            </button>
          </form>
          <button
            class="_button_1c0f93 _button--cancel_1c0f93"
            type="button"
          >
            Throw error
          </button>
          <button
            class="_button_1c0f93 _button--secondary_1c0f93 _button_628325 __628325"
            type="button"
          >
            <span
              class="visually-hidden"
            >
              Switch to dark theme
            </span>
          </button>
        </div>
      </header>
      <main
        class="_main_6798d4"
      >
        <section
          class="_listSection_6798d4"
        >
          <div
            class="_container_5bac6f"
          >
            <button
              class="_button_1c0f93 _button--primary_1c0f93 _button_5bac6f"
              disabled=""
              type="button"
            >
              Prev
            </button>
            <p
              class="_text_5bac6f"
            >
              Page 1 of 1
            </p>
            <button
              class="_button_1c0f93 _button--primary_1c0f93 _button_5bac6f"
              disabled=""
              type="button"
            >
              Next
            </button>
          </div>
          <ul
            class="_list_269ea4"
          >
            <li
              class="_card_c39673"
            >
              <a
                class="_active_c39673 _link_c39673"
                data-discover="true"
                href="/?details=1"
              >
                <div
                  class="_placeholder_4c56d5"
                >
                  <img
                    alt="Placeholder"
                    class="_image_4c56d5 _placeholderImage_4c56d5"
                    src="/src/assets/images/placeholder.svg"
                  />
                  <div
                    class="_loaderContainer_523128 _loader_4c56d5"
                  >
                    <h2
                      class="visually-hidden"
                    >
                      Loading...
                    </h2>
                    <div
                      class="_loader_523128"
                    />
                  </div>
                </div>
                <img
                  alt="Rick Sanchez Mocked"
                  class="_image_4c56d5 _hidden_4c56d5"
                  src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
                />
                <div
                  class="_content_c39673"
                >
                  <h2
                    class="_title_c39673"
                  >
                    Rick Sanchez Mocked
                  </h2>
                  <input
                    class="_checkbox_c39673"
                    type="checkbox"
                  />
                </div>
              </a>
            </li>
            <li
              class="_card_c39673"
            >
              <a
                class="_link_c39673"
                data-discover="true"
                href="/?details=8"
              >
                <div
                  class="_placeholder_4c56d5"
                >
                  <img
                    alt="Placeholder"
                    class="_image_4c56d5 _placeholderImage_4c56d5"
                    src="/src/assets/images/placeholder.svg"
                  />
                  <div
                    class="_loaderContainer_523128 _loader_4c56d5"
                  >
                    <h2
                      class="visually-hidden"
                    >
                      Loading...
                    </h2>
                    <div
                      class="_loader_523128"
                    />
                  </div>
                </div>
                <img
                  alt="Adjudicator Rick Mocked"
                  class="_image_4c56d5 _hidden_4c56d5"
                  src="https://rickandmortyapi.com/api/character/avatar/8.jpeg"
                />
                <div
                  class="_content_c39673"
                >
                  <h2
                    class="_title_c39673"
                  >
                    Adjudicator Rick Mocked
                  </h2>
                  <input
                    class="_checkbox_c39673"
                    type="checkbox"
                  />
                </div>
              </a>
            </li>
            <li
              class="_card_c39673"
            >
              <a
                class="_link_c39673"
                data-discover="true"
                href="/?details=15"
              >
                <div
                  class="_placeholder_4c56d5"
                >
                  <img
                    alt="Placeholder"
                    class="_image_4c56d5 _placeholderImage_4c56d5"
                    src="/src/assets/images/placeholder.svg"
                  />
                  <div
                    class="_loaderContainer_523128 _loader_4c56d5"
                  >
                    <h2
                      class="visually-hidden"
                    >
                      Loading...
                    </h2>
                    <div
                      class="_loader_523128"
                    />
                  </div>
                </div>
                <img
                  alt="Alien Rick Mocked"
                  class="_image_4c56d5 _hidden_4c56d5"
                  src="https://rickandmortyapi.com/api/character/avatar/15.jpeg"
                />
                <div
                  class="_content_c39673"
                >
                  <h2
                    class="_title_c39673"
                  >
                    Alien Rick Mocked
                  </h2>
                  <input
                    class="_checkbox_c39673"
                    type="checkbox"
                  />
                </div>
              </a>
            </li>
          </ul>
          <div
            aria-hidden="true"
            class="_flyout_8b00b0"
          >
            <p
              class="_counter_8b00b0"
            >
              Items selected: 
              0
            </p>
            <div
              class="_buttonsContainer_8b00b0"
            >
              <button
                class="_button_1c0f93 _button--cancel_1c0f93"
                type="button"
              >
                Unselect all
              </button>
              <a
                class="_link_8b00b0"
                download="0_characters.csv"
                href="#"
              >
                Download
              </a>
            </div>
          </div>
        </section>
        <section
          class="_detailsSection_6798d4"
        >
          <div
            class="_container_c19b66"
          >
            <div
              class="_card_c19b66"
            >
              <div
                class="_placeholder_4c56d5"
              >
                <img
                  alt="Placeholder"
                  class="_image_4c56d5 _placeholderImage_4c56d5"
                  src="/src/assets/images/placeholder.svg"
                />
                <div
                  class="_loaderContainer_523128 _loader_4c56d5"
                >
                  <h2
                    class="visually-hidden"
                  >
                    Loading...
                  </h2>
                  <div
                    class="_loader_523128 _secondary_523128"
                  />
                </div>
              </div>
              <img
                alt="Rick Sanchez Mocked"
                class="_image_4c56d5 _hidden_4c56d5"
                src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
              />
              <h2
                class="_title_c19b66"
              >
                Rick Sanchez Mocked
              </h2>
              <dl
                class="_descriptionList_c19b66"
              >
                <div
                  class="_descriptionItem_c19b66"
                >
                  <dt
                    class="_descriptionTerm_c19b66"
                  >
                    Species: 
                  </dt>
                  <dd
                    class="_descriptionDetail_c19b66"
                  >
                    Human
                  </dd>
                </div>
                <div
                  class="_descriptionItem_c19b66"
                >
                  <dt
                    class="_descriptionTerm_c19b66"
                  >
                    Status: 
                  </dt>
                  <dd
                    class="_descriptionDetail_c19b66"
                  >
                    Alive
                  </dd>
                </div>
                <div
                  class="_descriptionItem_c19b66"
                >
                  <dt
                    class="_descriptionTerm_c19b66"
                  >
                    Gender: 
                  </dt>
                  <dd
                    class="_descriptionDetail_c19b66"
                  >
                    Male
                  </dd>
                </div>
                <div
                  class="_descriptionItem_c19b66"
                >
                  <dt
                    class="_descriptionTerm_c19b66"
                  >
                    Episodes count: 
                  </dt>
                  <dd
                    class="_descriptionDetail_c19b66"
                  >
                    3
                  </dd>
                </div>
                <div
                  class="_descriptionItem_c19b66"
                >
                  <dt
                    class="_descriptionTerm_c19b66"
                  >
                    Origin: 
                  </dt>
                  <dd
                    class="_descriptionDetail_c19b66"
                  >
                    Earth (C-137)
                  </dd>
                </div>
                <div
                  class="_descriptionItem_c19b66"
                >
                  <dt
                    class="_descriptionTerm_c19b66"
                  >
                    Location: 
                  </dt>
                  <dd
                    class="_descriptionDetail_c19b66"
                  >
                    Citadel of Ricks
                  </dd>
                </div>
              </dl>
            </div>
            <button
              class="_button_1c0f93 _button--cancel_1c0f93 _button_c19b66"
              type="button"
            >
              Close details
            </button>
          </div>
        </section>
      </main>
    </div>
  </div>
</div>
`;
